Refuse lifecycle mutation of manual reasoning JARs