@@ -3,8 +3,6 @@ package io.github.didacll.madre.app;
 import io.github.didacll.madre.reasoning.installation.ReasoningConfiguredInstance;
 import io.github.didacll.madre.reasoning.installation.ReasoningMechanismProvider;
 import io.github.didacll.madre.reasoning.installation.ReasoningProviderConfiguration;
-import io.github.didacll.madre.reasoning.installation.ReasoningProviderConfigurationUpdate;
-import io.github.didacll.madre.reasoning.installation.ReasoningProviderDescriptor;
 import io.github.didacll.madre.reasoning.installation.ReasoningProviderId;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -21,160 +19,113 @@ final class ReasoningArtifactLifecycle {
 
     static InstallResult install(HostEnvironment host, HostEnvironment.LoadedConfiguration loaded,
             Properties properties, Path source, boolean replace) throws IOException {
-        Objects.requireNonNull(host, "host");
-        Objects.requireNonNull(loaded, "loaded");
-        Objects.requireNonNull(properties, "properties");
-        Path candidateJar = ManagedJarFiles.requireSourceJar(source);
-        ReasoningProviderId candidateId = inspectCandidate(candidateJar, properties);
-
-        Map<ReasoningProviderId, InstalledArtifact> installed = installed(host);
-        InstalledArtifact existing = installed.get(candidateId);
+        Path candidate = ManagedJarFiles.requireSourceJar(source);
+        ReasoningProviderId id = inspect(candidate, properties);
+        InstalledArtifact existing = installed(host).get(id);
         if (existing != null && existing.source() == Source.SHIPPED) {
-            throw new IllegalArgumentException("reasoning provider " + candidateId
+            throw new IllegalArgumentException("reasoning provider " + id
                     + " is shipped with MADRE and cannot be overridden by an owner artifact");
         }
+        Path owner = host.ownerReasoningDirectory();
         if (replace) {
             if (existing == null || existing.source() != Source.OWNER) {
                 throw new IllegalArgumentException(
-                        "--replace requires an existing owner-installed reasoning provider: "
-                                + candidateId);
+                        "--replace requires an existing owner-installed reasoning provider: " + id);
             }
+            ManagedJarFiles.requireManagedPath(owner, "reasoning", id.value(), existing.path());
         } else if (existing != null) {
-            throw new IllegalArgumentException("reasoning provider is already owner-installed: "
-                    + candidateId + "; use --replace to replace the same canonical identity");
+            throw new IllegalArgumentException("reasoning provider is already owner-installed: " + id
+                    + "; use --replace to replace the same canonical identity");
         }
-
-        Path ownerDirectory = host.ownerReasoningDirectory().toAbsolutePath().normalize();
-        Path destination = existing == null
-                ? ownerDirectory.resolve(ManagedJarFiles.managedFileName("reasoning", candidateId.value()))
-                : existing.path();
+        Path destination = ManagedJarFiles.managedPath(owner, "reasoning", id.value());
         if (existing == null && Files.exists(destination)) {
-            throw new IllegalStateException("managed reasoning destination already exists without the "
-                    + "expected provider identity: " + destination.getFileName());
+            throw new IllegalStateException("managed reasoning destination already exists: "
+                    + destination.getFileName());
         }
-
-        String digest;
-        Path staged = ManagedJarFiles.stage(candidateJar, ownerDirectory);
+        Path staged = ManagedJarFiles.stage(candidate, owner);
         try {
-            ReasoningProviderId stagedId = inspectCandidate(staged, properties);
-            if (!stagedId.equals(candidateId)) {
+            ReasoningProviderId stagedId = inspect(staged, properties);
+            if (!stagedId.equals(id)) {
                 throw new IllegalStateException("staged reasoning provider identity changed from "
-                        + candidateId + " to " + stagedId);
+                        + id + " to " + stagedId);
             }
-            digest = ManagedJarFiles.sha256(staged);
+            String digest = ManagedJarFiles.sha256(staged);
             ManagedJarFiles.commit(staged, destination);
+            return new InstallResult(id, destination, digest, replace);
         } finally {
             Files.deleteIfExists(staged);
         }
-        return new InstallResult(candidateId, destination, digest, replace);
     }
 
     static UninstallResult uninstall(HostEnvironment host, HostEnvironment.LoadedConfiguration loaded,
-            Properties properties, String providerId, boolean purgeConfiguration) throws IOException {
-        Objects.requireNonNull(host, "host");
-        Objects.requireNonNull(loaded, "loaded");
-        Objects.requireNonNull(properties, "properties");
+            Properties properties, String providerId, boolean purge) throws IOException {
         ReasoningProviderId id = new ReasoningProviderId(providerId);
         InstalledArtifact artifact = installed(host).get(id);
         if (artifact == null) {
             Path external = developmentSource(properties, id);
             if (external != null) {
                 throw new IllegalArgumentException("reasoning provider " + id + " is discovered from "
-                        + external + " outside MADRE's owner-managed reasoning root; remove that "
-                        + "developer artifact manually if intended");
+                        + external + " outside MADRE's owner-managed reasoning root; remove it manually");
             }
             throw new IllegalArgumentException("reasoning provider is not installed: " + id);
         }
         if (artifact.source() == Source.SHIPPED) {
             throw new IllegalArgumentException("shipped reasoning provider cannot be uninstalled: " + id);
         }
-        if (artifact.source() != Source.OWNER) {
-            throw new IllegalArgumentException(
-                    "reasoning provider is not in MADRE's owner-managed reasoning root: " + id);
-        }
+        ManagedJarFiles.requireManagedPath(host.ownerReasoningDirectory(), "reasoning", id.value(),
+                artifact.path());
 
         Properties previous = copy(properties);
-        Properties purged = previous;
-        List<ReasoningConfiguredInstance> configured;
+        Properties next = previous;
+        List<ReasoningConfiguredInstance> instances;
         try (InstalledReasoningLoader loader = InstalledReasoningLoader.forJar(artifact.path())) {
             ReasoningMechanismProvider provider = loader.provider(id).orElseThrow(() ->
                     new IllegalStateException("owner reasoning artifact no longer exposes provider " + id));
-            configured = configured(provider, ReasoningConfigurationManager.configuration(properties));
-            if (!configured.isEmpty() && purgeConfiguration) {
-                purged = purge(provider, previous);
-            }
+            instances = configured(provider, ReasoningConfigurationManager.configuration(properties));
+            if (!instances.isEmpty() && purge) next = purge(provider, previous);
         }
-        if (!configured.isEmpty() && !purgeConfiguration) {
-            throw new IllegalArgumentException("reasoning provider " + id + " has configured instances ("
-                    + configured.stream().map(ReasoningConfiguredInstance::name).sorted()
-                            .reduce((left, right) -> left + "," + right).orElse("")
-                    + "); rerun uninstall with --purge-configuration to remove provider-owned "
-                    + "instance configuration before uninstalling");
+        if (!instances.isEmpty() && !purge) {
+            throw new IllegalArgumentException("reasoning provider " + id
+                    + " has configured instances; rerun uninstall with --purge-configuration");
         }
-
-        boolean configurationChanged = !configured.isEmpty() && purgeConfiguration;
-        if (configurationChanged) {
-            HostEnvironment.replaceConfiguration(loaded.path(), purged);
-            replaceProperties(properties, purged);
+        boolean changed = !instances.isEmpty() && purge;
+        if (changed) {
+            HostEnvironment.replaceConfiguration(loaded.path(), next);
+            replace(properties, next);
         }
         try {
-            Path owner = host.ownerReasoningDirectory().toAbsolutePath().normalize();
-            if (!artifact.path().getParent().equals(owner)) {
-                throw new IllegalStateException(
-                        "refusing to delete reasoning artifact outside owner root: " + artifact.path());
-            }
             Files.delete(artifact.path());
         } catch (IOException | RuntimeException failure) {
-            if (configurationChanged) {
-                try {
-                    HostEnvironment.replaceConfiguration(loaded.path(), previous);
-                    replaceProperties(properties, previous);
-                } catch (IOException restoreFailure) {
-                    failure.addSuppressed(restoreFailure);
-                }
-            }
+            if (changed) restore(loaded.path(), properties, previous, failure);
             throw failure;
         }
-        return new UninstallResult(id, artifact.path(), configurationChanged);
+        return new UninstallResult(id, artifact.path(), changed);
     }
 
     static Source classify(HostEnvironment host, Path source) {
-        Path path = Objects.requireNonNull(source, "source").toAbsolutePath().normalize();
-        Path parent = path.getParent();
-        Path owner = host.ownerReasoningDirectory().toAbsolutePath().normalize();
-        Path shipped = host.reasoningDirectories().get(0).toAbsolutePath().normalize();
-        if (owner.equals(parent)) return Source.OWNER;
-        if (shipped.equals(parent)) return Source.SHIPPED;
+        Path parent = source.toAbsolutePath().normalize().getParent();
+        if (host.ownerReasoningDirectory().toAbsolutePath().normalize().equals(parent)) return Source.OWNER;
+        if (host.reasoningDirectories().getFirst().toAbsolutePath().normalize().equals(parent)) return Source.SHIPPED;
         return Source.DEVELOPMENT;
     }
 
-    private static ReasoningProviderId inspectCandidate(Path jar, Properties properties) {
+    private static ReasoningProviderId inspect(Path jar, Properties properties) {
         try (InstalledReasoningLoader reasoning = InstalledReasoningLoader.forJar(jar);
                 InstalledModuleLoader modules = InstalledModuleLoader.forJar(jar)) {
-            List<InstalledReasoningLoader.DiscoveredProvider> reasoningProviders =
-                    reasoning.discoveredProviders();
-            boolean modulePresent = !modules.providers().isEmpty();
-            if (reasoningProviders.isEmpty()) {
-                if (modulePresent) {
-                    throw new IllegalArgumentException(
-                            "Module artifact cannot be installed as a reasoning provider");
-                }
-                throw new IllegalArgumentException(
-                        "reasoning artifact exposes no ReasoningMechanismProvider");
+            var providers = reasoning.discoveredProviders();
+            boolean module = !modules.providers().isEmpty();
+            if (providers.isEmpty()) {
+                if (module) throw new IllegalArgumentException(
+                        "Module artifact cannot be installed as a reasoning provider");
+                throw new IllegalArgumentException("reasoning artifact exposes no ReasoningMechanismProvider");
             }
-            if (reasoningProviders.size() != 1) {
-                throw new IllegalArgumentException(
-                        "managed reasoning artifact must expose exactly one ReasoningMechanismProvider");
-            }
-            if (modulePresent) {
-                throw new IllegalArgumentException(
-                        "managed reasoning artifact cannot also expose a ModuleProvider");
-            }
-            ReasoningMechanismProvider provider = reasoningProviders.getFirst().provider();
-            ReasoningProviderDescriptor descriptor = Objects.requireNonNull(provider.descriptor(),
-                    "reasoning provider descriptor");
-            Objects.requireNonNull(provider.configurator(),
-                    "reasoning provider configurator for " + descriptor.id());
+            if (providers.size() != 1) throw new IllegalArgumentException(
+                    "managed reasoning artifact must expose exactly one ReasoningMechanismProvider");
+            if (module) throw new IllegalArgumentException(
+                    "managed reasoning artifact cannot also expose a ModuleProvider");
+            ReasoningMechanismProvider provider = providers.getFirst().provider();
+            var descriptor = Objects.requireNonNull(provider.descriptor(), "reasoning provider descriptor");
+            Objects.requireNonNull(provider.configurator(), "reasoning provider configurator");
             configured(provider, ReasoningConfigurationManager.configuration(properties));
             return descriptor.id();
         }
@@ -183,13 +134,11 @@ final class ReasoningArtifactLifecycle {
     private static Map<ReasoningProviderId, InstalledArtifact> installed(HostEnvironment host) {
         Map<ReasoningProviderId, InstalledArtifact> result = new TreeMap<>();
         try (InstalledReasoningLoader loader = new InstalledReasoningLoader(host.reasoningDirectories())) {
-            for (InstalledReasoningLoader.DiscoveredProvider discovered : loader.discoveredProviders()) {
-                ReasoningProviderId id = Objects.requireNonNull(discovered.provider().descriptor(),
-                        "reasoning provider descriptor").id();
-                InstalledArtifact artifact = new InstalledArtifact(id, discovered.sourceJar(),
+            for (var discovered : loader.discoveredProviders()) {
+                ReasoningProviderId id = discovered.provider().descriptor().id();
+                InstalledArtifact artifact = new InstalledArtifact(discovered.sourceJar(),
                         classify(host, discovered.sourceJar()));
-                InstalledArtifact previous = result.putIfAbsent(id, artifact);
-                if (previous != null) {
+                if (result.putIfAbsent(id, artifact) != null) {
                     throw new IllegalStateException("duplicate reasoning provider identity " + id);
                 }
             }
@@ -198,63 +147,53 @@ final class ReasoningArtifactLifecycle {
     }
 
     private static Path developmentSource(Properties properties, ReasoningProviderId id) {
-        String configured = properties.getProperty("reasoning.directory");
-        if (configured == null || configured.isBlank()) return null;
-        Path directory = Path.of(configured.strip()).toAbsolutePath().normalize();
-        try (InstalledReasoningLoader loader = new InstalledReasoningLoader(List.of(directory))) {
+        String value = properties.getProperty("reasoning.directory");
+        if (value == null || value.isBlank()) return null;
+        try (InstalledReasoningLoader loader = new InstalledReasoningLoader(List.of(Path.of(value.strip()).toAbsolutePath().normalize()))) {
             return loader.discoveredProviders().stream()
                     .filter(item -> item.provider().descriptor().id().equals(id))
-                    .map(InstalledReasoningLoader.DiscoveredProvider::sourceJar)
-                    .findFirst().orElse(null);
+                    .map(InstalledReasoningLoader.DiscoveredProvider::sourceJar).findFirst().orElse(null);
         }
     }
 
     private static List<ReasoningConfiguredInstance> configured(ReasoningMechanismProvider provider,
             ReasoningProviderConfiguration configuration) {
-        List<ReasoningConfiguredInstance> instances = provider.configurator()
-                .configuredInstances(configuration);
-        if (instances == null) {
-            throw new IllegalStateException("reasoning provider " + provider.descriptor().id()
-                    + " returned null configured-instance list");
-        }
-        return instances.stream().map(instance -> Objects.requireNonNull(instance,
-                "reasoning provider returned null configured instance")).toList();
+        var instances = provider.configurator().configuredInstances(configuration);
+        if (instances == null) throw new IllegalStateException("reasoning provider returned null configured-instance list");
+        return instances.stream().map(Objects::requireNonNull).toList();
     }
 
     private static Properties purge(ReasoningMechanismProvider provider, Properties source) {
-        Properties candidate = copy(source);
-        List<ReasoningConfiguredInstance> instances = configured(provider,
-                ReasoningConfigurationManager.configuration(candidate));
-        for (ReasoningConfiguredInstance instance : instances) {
-            ReasoningProviderConfigurationUpdate update = Objects.requireNonNull(
-                    provider.configurator().remove(instance.name(),
-                            ReasoningConfigurationManager.configuration(candidate)),
-                    "reasoning provider configurator returned null removal update");
-            apply(candidate, update);
+        Properties result = copy(source);
+        for (var instance : configured(provider, ReasoningConfigurationManager.configuration(result))) {
+            var update = Objects.requireNonNull(provider.configurator().remove(instance.name(), ReasoningConfigurationManager.configuration(result)));
+            update.removals().forEach(result::remove);
+            update.values().forEach(result::setProperty);
         }
-        List<ReasoningConfiguredInstance> remaining = configured(provider,
-                ReasoningConfigurationManager.configuration(candidate));
-        if (!remaining.isEmpty()) {
-            throw new IllegalStateException("reasoning provider " + provider.descriptor().id()
-                    + " still reports configured instances after provider-owned purge");
+        if (!configured(provider, ReasoningConfigurationManager.configuration(result)).isEmpty()) {
+            throw new IllegalStateException("reasoning provider still has configured instances after purge");
         }
-        return candidate;
-    }
-
-    private static void apply(Properties properties, ReasoningProviderConfigurationUpdate update) {
-        update.removals().forEach(properties::remove);
-        update.values().forEach(properties::setProperty);
+        return result;
     }
 
     private static Properties copy(Properties source) {
-        Properties copy = new Properties();
-        source.stringPropertyNames().forEach(name -> copy.setProperty(name, source.getProperty(name)));
-        return copy;
+        Properties result = new Properties();
+        source.stringPropertyNames().forEach(name -> result.setProperty(name, source.getProperty(name)));
+        return result;
     }
 
-    private static void replaceProperties(Properties destination, Properties source) {
+    private static void replace(Properties destination, Properties source) {
         destination.clear();
         source.forEach(destination::put);
+    }
+
+    private static void restore(Path path, Properties destination, Properties previous, Throwable failure) {
+        try {
+            HostEnvironment.replaceConfiguration(path, previous);
+            replace(destination, previous);
+        } catch (IOException restoreFailure) {
+            failure.addSuppressed(restoreFailure);
+        }
     }
 
     enum Source {
@@ -264,9 +203,7 @@ final class ReasoningArtifactLifecycle {
         String label() { return label; }
     }
 
-    record InstallResult(ReasoningProviderId providerId, Path path, String sha256,
-            boolean replacement) { }
-    record UninstallResult(ReasoningProviderId providerId, Path path,
-            boolean configurationPurged) { }
-    private record InstalledArtifact(ReasoningProviderId id, Path path, Source source) { }
+    record InstallResult(ReasoningProviderId providerId, Path path, String sha256, boolean replacement) { }
+    record UninstallResult(ReasoningProviderId providerId, Path path, boolean configurationPurged) { }
+    private record InstalledArtifact(Path path, Source source) { }
 }
